--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=https://ebilet-8f91.onrender.com/api
+REACT_APP_IPGEO_API_KEY=90cea4be77d44b80ab21374726d21b70
+JWT_SECRET=qfcbgnbdfhadfgadfgah
